BPER/DEVF/force-app/main/default/objects/Forecast_Erogazioni__c/Forecast_Erogazioni__c.object-meta.xml
<CustomObject>
    <label>Forecast Erogazioni</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Forecast Erogazioni Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Erogazioni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>