BPER/DEVF/force-app/main/default/objects/Forecast_Erogazioni__c/fields/Anno__c.field-meta.xml
<CustomField>
    <fullName>Anno__c</fullName>
    <label>Anno</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>