BPER/DEVF/force-app/main/default/objects/Forecast_Erogazioni__c/fields/Erogata__c.field-meta.xml
<CustomField>
    <fullName>Erogata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erogata</label>
    <type>Checkbox</type>
</CustomField>