BPER/DEVF/force-app/main/default/objects/Forecast_Erogazioni__c/fields/Erogazioni__c.field-meta.xml
<CustomField>
    <fullName>Erogazioni__c</fullName>
    <formula>IF(Erogata__c=true,&apos;Erogato&apos;,&apos;Forecast&apos;)</formula>
    <label>Erogazioni</label>
    <type>Text</type>
</CustomField>