BPER/DEVF/force-app/main/default/objects/Forecast_Erogazioni__c/fields/Importo_ponderato__c.field-meta.xml
<CustomField>
    <fullName>Importo_ponderato__c</fullName>
    <formula>(CASE(Probabilita_di_successo__c, &apos;10%&apos;, 10, &apos;25%&apos;, 25,&apos;50%&apos;,50,&apos;75%&apos;,75,&apos;90%&apos;,90,&apos;100%&apos;,100,0) * Importo__c)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importo ponderato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>