BPER/DEVF/force-app/main/default/objects/Forecast_Erogazioni__c/fields/Mese__c.field-meta.xml
<CustomField>
    <fullName>Mese__c</fullName>
    <label>Mese</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gennaio</fullName>
            </value>
            <value>
                <fullName>Febbraio</fullName>
            </value>
            <value>
                <fullName>Marzo</fullName>
            </value>
            <value>
                <fullName>Aprile</fullName>
            </value>
            <value>
                <fullName>Maggio</fullName>
            </value>
            <value>
                <fullName>Giugno</fullName>
            </value>
            <value>
                <fullName>Luglio</fullName>
            </value>
            <value>
                <fullName>Agosto</fullName>
            </value>
            <value>
                <fullName>Settembre</fullName>
            </value>
            <value>
                <fullName>Ottobre</fullName>
            </value>
            <value>
                <fullName>Novembre</fullName>
            </value>
            <value>
                <fullName>Dicembre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>