BPER/DEVF/force-app/main/default/objects/Forecast_Erogazioni__c/fields/N_Erogazioni__c.field-meta.xml
<CustomField>
    <fullName>N_Erogazioni__c</fullName>
    <formula>&apos;Erogazione&apos; + &apos;_&apos; + Name_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_Erogazioni</label>
    <type>Text</type>
</CustomField>