BPER/DEVF/force-app/main/default/objects/Forecast_Erogazioni__c/fields/Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Name_Formula__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>