BPER/DEVF/force-app/main/default/objects/Forecast_Erogazioni__c/validationRules/CIB_Check_Erogata.validationRule-meta.xml
<ValidationRule>
    <fullName>CIB_Check_Erogata</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(Erogata__c = true,TEXT(Opportunity__r.StageName) &lt;&gt; &apos;In erogazione&apos;),true,false)</errorConditionFormula>
    <errorMessage>Il Flag di Erogazione può essere inserito solo nello stato &apos;In erogazione&apos;</errorMessage>
</ValidationRule>